--- a/empty-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/empty-webapp/src/main/resources/archetype-resources/pom.xml
@@ -1,106 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
-#set( $dollar = '$' )
+#set($dollar = '$')
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>${groupId}</groupId>
-  <artifactId>${artifactId}</artifactId>
-  <version>${version}</version>
-  <packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>${groupId}</groupId>
+    <artifactId>${artifactId}</artifactId>
+    <version>${version}</version>
+    <packaging>pom</packaging>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <gin.version>3.0.0</gin.version>
-    <gwt.version>2.10.0</gwt.version>
-    <gwt-maven.version>1.0.1</gwt-maven.version>
-    <jdk.version>11</jdk.version>
-    <jetty.version>10.0.8</jetty.version>
-    <maven-compiler.version>3.10.1</maven-compiler.version>
-    <maven-source.version>3.2.0</maven-source.version>
-  </properties>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.gwtproject</groupId>
-        <artifactId>gwt</artifactId>
-        <version>${dollar}{gwt.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-       <groupId>io.github.gwtplus.gin</groupId>
-       <artifactId>gin</artifactId>
-       <version>${dollar}{gin.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <gin.version>3.0.0</gin.version>
+        <gwt.version>2.10.0</gwt.version>
+        <gwt-maven.version>1.0.1</gwt-maven.version>
+        <jdk.version>11</jdk.version>
+        <jetty.version>10.0.8</jetty.version>
+        <maven-compiler.version>3.10.1</maven-compiler.version>
+        <maven-source.version>3.2.0</maven-source.version>
+        <maven-war.version>3.3.1</maven-war.version>
+    </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.gwtproject</groupId>
+                <artifactId>gwt</artifactId>
+                <version>${dollar}{gwt.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.gwtplus.gin</groupId>
+                <artifactId>gin</artifactId>
+                <version>${dollar}{gin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>net.ltgt.gwt.maven</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <inherited>false</inherited>
-      </plugin>
-    </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${dollar}{maven-compiler.version}</version>
-          <configuration>
-            <source>${dollar}{jdk.version}</source>
-            <target>${dollar}{jdk.version}</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>${dollar}{jetty.version}</version>
-          <configuration>
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>net.ltgt.gwt.maven</groupId>
-          <artifactId>gwt-maven-plugin</artifactId>
-          <version>${dollar}{gwt-maven.version}</version>
-          <extensions>true</extensions>
-          <configuration>
-            <launcherDir>${project.build.directory}/gwt/launcherDir</launcherDir>
-            <sourceLevel>${dollar}{jdk.version}</sourceLevel>
-            <failOnError>true</failOnError>
-            <codeserverArgs>
-              <arg>-bindAddress</arg>
-              <arg>0.0.0.0</arg>
-            </codeserverArgs>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <version>${dollar}{maven-source.version}</version>
-          <executions>
-            <execution>
-              <id>attach-sources</id>
-              <phase>package</phase>
-              <goals>
-                <goal>jar-no-fork</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <!-- Workaround for https://issues.apache.org/jira/browse/MSOURCES-95 -->
-            <includes>
-              <include>**/**</include>
-            </includes>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.ltgt.gwt.maven</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <inherited>false</inherited>
+            </plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${dollar}{maven-compiler.version}</version>
+                    <configuration>
+                        <source>${dollar}{jdk.version}</source>
+                        <target>${dollar}{jdk.version}</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>${dollar}{jetty.version}</version>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>net.ltgt.gwt.maven</groupId>
+                    <artifactId>gwt-maven-plugin</artifactId>
+                    <version>${dollar}{gwt-maven.version}</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <launcherDir>${project.build.directory}/gwt/launcherDir</launcherDir>
+                        <sourceLevel>${dollar}{jdk.version}</sourceLevel>
+                        <failOnError>true</failOnError>
+                        <codeserverArgs>
+                            <arg>-bindAddress</arg>
+                            <arg>0.0.0.0</arg>
+                        </codeserverArgs>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>${dollar}{maven-source.version}</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <!-- Workaround for https://issues.apache.org/jira/browse/MSOURCES-95 -->
+                        <includes>
+                            <include>**/**</include>
+                        </includes>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${dollar}{maven-war.version}</version>
+                    <executions>
+                        <execution>
+                            <id>default-war</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>war</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
