--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com.risetek.archetypes</groupId>
   <artifactId>gwt-maven-archetypes</artifactId>
   <version>HEAD-SNAPSHOT</version>
   <packaging>pom</packaging>
-
 
   <modules>
     <module>modular-webapp</module>
@@ -19,6 +17,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- version: https://maven.apache.org/plugins/index.html -->
+    <archetype.maven-version>3.2.1</archetype.maven-version>
+    <deploy.maven-version>3.0.0</deploy.maven-version>
+    <source.maven-version>3.2.1</source.maven-version>
+    <javadoc.maven-version>3.2.0</javadoc.maven-version>
+    <gpg.maven-version>1.6</gpg.maven-version>
   </properties>
 
   <build>
@@ -26,7 +30,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
+        <version>${deploy.maven-version}</version>
         <configuration>
           <!-- using nexus-staging-maven-plugin instead -->
           <skip>true</skip>
@@ -81,7 +85,7 @@
       <extension>
         <groupId>org.apache.maven.archetype</groupId>
         <artifactId>archetype-packaging</artifactId>
-        <version>3.1.0</version>
+        <version>${archetype.maven-version}</version>
       </extension>
     </extensions>
 
@@ -89,7 +93,7 @@
       <plugins>
         <plugin>
           <artifactId>maven-archetype-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>${archetype.maven-version}</version>
           <configuration>
             <ignoreEOLStyle>true</ignoreEOLStyle>
           </configuration>
@@ -105,7 +109,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.2.1</version>
+            <version>${source.maven-version}</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -118,7 +122,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.2.0</version>
+            <version>${javadoc.maven-version}</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -131,7 +135,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.6</version>
+            <version>${gpg.maven-version}</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
